fixes popover alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -122,7 +122,7 @@ form {
 }
 .example {
   position: relative;
-  margin-bottom: 5em;
+  margin-bottom: 70px;
   margin-right: 1em;
   color: inherit;
   &:after {
